# ai_r

./: Cargo.toml
src/: data.rs  main.rs  model.rs  train.rs
src/core/: layers.rs  mod.rs  ops.rs  tensor.rs
